--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.7.9",
     "expo": "~52.0.32",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
+    "multer": "^1.4.5-lts.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1308.1",
@@ -22,8 +24,7 @@
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-screens": "^4.6.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-image-picker": "~16.0.6"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
